--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@tsparticles/slim": "^3.8.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.2",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.485.0",
     "motion": "^12.6.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
     "tailwind-merge": "^3.0.2",
