--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
     "tailwind-merge": "^3.0.2",
+    "tailwind-scrollbar": "^4.0.2",
     "three": "^0.175.0",
     "three-globe": "^2.42.3"
   },
